fixed row and banner alignment

--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@ section {
     min-height: auto;
     margin: 10px;
     left: 18px;
-    flex-wrap: wrap;
+    
 }
 
 .thumbnail {
